syntax = "proto3";

import "wrappers.proto";
import "uint128.proto";

// Access key provides limited access to an account. Each access key belongs to some account and
// is identified by a unique (within the account) public key. One account may have large number of
// access keys. Access keys allow to act on behalf of the account by restricting transactions
// that can be issued.
message AccessKey {
    // The nonce for this access key.
    // NOTE: In some cases the access key needs to be recreated. If the new access key reuses the
    // same public key, the nonce of the new access key should be equal to the nonce of the old
    // access key. It's required to avoid replaying old transactions again.
    uint64 nonce = 1;

    // Defines permissions for this access key.
    oneof permission {
        FullAccessPermission full_access = 2;
        FunctionCallPermission function_call = 3;
    }
}

// Grants full access to the account.
// NOTE: It's used to replace account-level public keys.
message FullAccessPermission {
    // empty
}

// Grants limited permission to issue transactions with a single function call action.
// Those function calls can't have attached balance.
// The permission can limit the allowed balance to be spent on the prepaid gas.
// It also restrict the account ID of the receiver for this function call.
// It also can restrict the method name for the allowed function calls.
message FunctionCallPermission {
    // Allowance is a balance limit to use by this access key to pay for function call gas and
    // transaction fees. When this access key is used, both account balance and the allowance is
    // decreased by the same value.
    // `None` means unlimited allowance.
    // NOTE: To change or increase the allowance, the old access key needs to be deleted and a new
    // access key should be created.
    Uint128 allowance = 1;

    // The access key only allows transactions with the given receiver's account id.
    string receiver_id = 2;

    // A list of method names that can be used. The access key only allows transactions with the
    // function call of one of the given method names.
    // Empty list means any method name can be used.
    repeated string method_names = 3;
}
